--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,9 +131,39 @@ input::placeholder{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #5e0070;
   text-shadow: 1px 1px #000000;
-  border-bottom: 1px solid #444444;
   margin-bottom: 2px;
   font-size: 22px;
+}
+
+.issueTitleDiv{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #444444;
+}
+
+.issueTitleDiv .deleteIssueBtn{
+  visibility: hidden;
+  transition: all linear 100ms;
+}
+
+.issueTitleDiv:hover .deleteIssueBtn{
+  visibility: visible;
+}
+
+.deleteIssueBtn{
+  height: 20px;
+  width: 20px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #cd0000;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 600;
+  text-shadow: 1.4px 1.4px black;
 }
 
 .voteButtons{
@@ -141,7 +171,7 @@ input::placeholder{
 }
 
 .up > button {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: #ffffff00;
   border: none;
   margin: 5px;
 }
@@ -272,6 +302,39 @@ input::placeholder{
 
 .comment{
   color: #dcd7ce;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #a5a5a5;
+  padding: 5px 0;
+}
+
+.deleteCommentBtn{
+  display: flex;
+  align-items: center;
+  justify-content:right ;
+  margin-left: auto;
+}
+
+/* .comment .deleteCommentBtn{
+  visibility: hidden;
+}
+
+.comment:hover .deleteCommentBtn{
+  visibility: visible;
+} */
+
+.deleteCommentBtn > button{
+  height: 15px;
+  width: 15px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(205, 0, 0);
+  border-radius: 5px;
+  color: white;
+  font-size: 10px;
+  text-shadow: 1px 1px black;
 }
 
 .comment > hr{
