--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,10 +21,16 @@ body::-webkit-scrollbar{
 
 button{
   cursor: pointer;
+  border: none;
 }
 
 input:focus{
-  background-color: #fd6bff8d;
+  border: 1px solid #440078;
+}
+
+input {
+  border: 1px solid #cecece;
+  background-color: #cecece;
 }
 
 input::placeholder{
@@ -50,7 +56,7 @@ input::placeholder{
   color: #c9c3b8;
 }
 
-.authContainer{
+/* .authContainer{
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -80,7 +86,7 @@ input::placeholder{
 .authContainer > form > p {
   max-width: 200px;
   text-align: center;
-}
+} */
 
 .authContainer > form > input,
 .authContainer > form > button {
@@ -89,11 +95,82 @@ input::placeholder{
   border-radius: 5px;
 }
 
-.authContainer > form > button{
-  /* background: linear-gradient(145deg, #838383, #252525); */
-  background: linear-gradient(145deg, #b000b3, #4a0058);
-  color: #ffffff;
-  text-shadow: 1.5px 1.5px black;
+.auth {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.auth > p {
+  margin: 15px;
+  text-decoration: underline;
+  cursor: pointer;
+  font-family: "Wittgenstein", serif;
+  color: #fffdfd;
+}
+
+.auth > form {
+  border: 1px solid #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffff;
+  margin-top: 80px;
+  box-shadow: 0px 0px 10px 1px #2a2a2a;
+}
+
+.auth > form > p {
+  max-width: 200px;
+  text-align: center;
+}
+
+.auth form input,
+.auth form button {
+  margin: 15px 8px;
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  background-color: #cecece;
+}
+
+.auth > form > input,
+.passDiv > input {
+  border: 1px solid #cecece;
+}
+
+.auth > form > input:focus,
+.passDiv > input:focus {
+  border: 1px solid #440078;
+}
+
+.auth > form > button{
+  background-color: #440078;
+  color: white;
+}
+
+.passDiv{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.passDiv > input{
+  margin: 15px 8px;
+  padding: 8px;
+  border-radius: 5px;
+  background-color: #cecece;
+  width: 200px;
+}
+
+.passDiv > span{
+  position: relative;
+  left: -30px;
+  margin: -12px;
+  cursor: pointer;
+  color: #454545;
 }
 
 .issueList {
@@ -102,23 +179,25 @@ input::placeholder{
   justify-content: center;
 }
 
-.issueForm > button{
-  background: linear-gradient(145deg, #b000b3, #4a0058);
+.issueForm button {
+  /* background: linear-gradient(145deg, #b000b3, #440078); */
+  background-color: #440078;
   color: #ffffff;
   text-shadow: 1.5px 1.5px black;
 }
 
 .issue {
-  background-color: #565656;
+  background-color: #ffff;
   margin: 15px;
   padding: 15px;
   border-radius: 10px;
   width: 300px;
   border: 1px solid #a5a5a5;
+  color: rgb(40, 40, 40);
 }
 
 .issue > h1 {
-  text-shadow: 2px 2px black;
+  /* text-shadow: 2px 2px black; */
   margin-bottom: 6px;
   text-decoration: underline;
 }
@@ -129,7 +208,7 @@ input::placeholder{
 
 .issueName{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #5e0070;
+  color: #440078;
   text-shadow: 1px 1px #000000;
   margin-bottom: 2px;
   font-size: 22px;
@@ -241,7 +320,7 @@ input::placeholder{
   flex-direction: column;
   margin: 15px 0;
   border: 1px solid #c9c3b8;
-  background-color: #565656;
+  background-color: #ffff;
   padding: 16px;
   border-radius: 5px
 }
@@ -253,39 +332,36 @@ input::placeholder{
   border-radius: 5px
 }
 
-.profile > form > button{
-  background-color: #a5a5a5;
-}
-
 .commentForm{
   display: flex;
   align-items: center;
 }
 
 .commentForm > input {
-  height: 25px;
-  padding: 5px;
+  padding: 8px;
   border-radius: 5px;
+  margin-right: 15px;
 }
 
 .commentForm > button {
-  height: 25px;
-  padding: 5px;
+  padding: 8px;
   border-radius: 5px;
   display: flex;
   align-items: center;
-  background: linear-gradient(145deg, #b000b3, #4a0058);
+  /* background: linear-gradient(145deg, #b000b3, #440078); */
+  background-color: #440078;
   color: #ffffff;
 }
 
 .commentList{
-  background-color: #454545;
+  background-color: #e3e3e3;
   padding: 8px;
   width: 230px;
   border-radius: 10px;
   border: 1px solid #a5a5a5;
   max-height: 70px;
   overflow-y: scroll;
+  color: #454545;
 }
 
 .commentList::-webkit-scrollbar{
@@ -301,7 +377,7 @@ input::placeholder{
 }
 
 .comment{
-  color: #dcd7ce;
+  color: #555555;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #a5a5a5;
@@ -345,7 +421,7 @@ input::placeholder{
 }
 
 .commentName{
-  color: #ffffff;
+  color: #3d3d3d;
 }
 
 .commentBtn{
